--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Fredoka+One&family=Lilita+One&family=Tilt+Warp&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Fredoka+One&family=Lilita+One&family=Tilt+Warp&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -14,19 +18,17 @@ body {
   background-color: white;
   width: 100%;
   height: 80px;
-  box-shadow: 0px 1px 20px silver;
+  box-shadow: 0px 1px 10px silver;
 }
 #logo-nav {
   width: 40px;
   height: 40px;
   color: #00ab2d;
-
-
   margin-left: 120px;
 }
 #nav-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 #left-containers {
@@ -50,8 +52,7 @@ body {
   font-weight: 700;
   font-size: 15px;
   background: #fff;
-  box-shadow: 0px 0px 40px silver;
-}
+  box-shadow: 8px 5px 13px silver;}
 #flex-center {
   margin-top: 20px;
 }
@@ -89,6 +90,8 @@ body {
   font-family: sans-serif;
   font-weight: bolder;
   margin-left: -200px;
+  font-family: 'Courgette', cursive;
+
 }
 #section {
   position: relative;
