--- a/style/masters.css
+++ b/style/masters.css
@@ -1,5 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lilita+One&family=Tilt+Warp&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Fredoka+One&family=Lilita+One&family=Tilt+Warp&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -9,9 +11,6 @@
 /* navbar */
 
 
-body {
-    height: 2000px;
-  }
   #navbar {
     z-index: 10;
     position: fixed;
@@ -53,8 +52,7 @@ body {
     font-weight: 700;
     font-size: 15px;
     background: #fff;
-    box-shadow: 0px 0px 40px silver;
-  }
+    box-shadow: 8px 5px 13px silver;  }
   #flex-center {
     margin-top: 20px;
   }
@@ -92,6 +90,8 @@ body {
     font-family: sans-serif;
     font-weight: bolder;
     margin-left: -200px;
+    font-family: 'Courgette', cursive;
+
   }
   #section {
     position: relative;
