--- a/style/index.css
+++ b/style/index.css
@@ -16,7 +16,7 @@
 
 
 .section-container {
-  column-gap: 20px;
+  column-gap: 123px;
 }
 #navbar {
   z-index: 10;
@@ -35,32 +35,66 @@
 }
 
 .right-containers-on-section  {
-
+padding-top: 97px;
+line-height: 20px;
 }
 .nav-container {
   display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+}
+
+.bnt-zakas {
+  float: right;
+  border: none ;
+  background-color: #00ab2d;
+  color: white;
+  padding: 20px 40px;
+  border-radius: 50px;
+  font-weight: 700;
+}
+
+.right-cont-search {
+  border:  2px solid #00ab2d;
+  border-radius: 50px;
+  padding: 4px;
+  margin-top: 40px;
+}
+
+.right-cont-search input {
+  border:none;
+  border-radius: 50px;
+  padding: 20px;
+  outline: none;
+
 }
  
+.right-containers-on-section p {
+  color: gainsboro;
+  font-size: 27px;
+  margin-top: 10px;
+}
+
 .left-containers-on-section img {
   width: 450px;
   height: 450px;
   border-radius: 50%;
 }
+.left-containers-on-section{
+  padding-top: 59px;
+}
 
 /* status block */
 
 .status_block {
-  position: relative;
-  left: 40px;
-  top: 300px;
+
   display: flex;
-  float: left;
 }
 
 .icons__and_txt {
   width: 300px;
   height: 108px;
-  margin-right:250px;
+ 
 }
 
 .icons_style {
@@ -79,6 +113,54 @@
 }
 
 
+.logo-nav {
+  color: #00ab2d;
+  font-size: 15px;
+
+}
+
+.registr-btn {
+  border: none;
+  padding: 5px 20px;
+  border-radius: 20px;
+  font-weight: 700;
+  margin-right: 20px;
+  background-color: #fff;
+  box-shadow: 05px 5px 10px silver;
+}
+
+.phone-btn {
+  padding: 10px;
+  border-radius: 50%;
+  background-color: #00ab2d;
+  color: white;
+  font-weight: 700;
+}
+
+.btn-rate {
+  border: none;
+  background-color: #00ab2d;
+  border-radius: 20px;
+  color: white;
+  padding: 5px 20px;
+  margin-right: 20px;
+  font-weight: 700;
+}
+
+.right-container {
+  float: right;
+}
+
+.margin-on-nav {
+  font-family: 'Courgette', cursive;
+  font-size: 33px;
+  font-family: sans-serif;
+  font-weight: bolder;
+
+  font-family: 'Courgette', cursive;
+
+}
+
 
 
 .cart__img {
@@ -86,28 +168,31 @@
 }
 
 .text_paragrof {
-  width: 400px;
   font-size: 1.5rem;
   font-family: sans-serif;
 }
-#status-block-flex-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
+
 
 
 /* Как это работает */
 
-
+#status-block-flex-container {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
 .cart__items {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  float: left;
   position: relative;
-  top: 600px;
+}
+
+.text_paragrof {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  max-width: 262px;
+  font-size: 20px;
 }
 
 .cart {
@@ -116,22 +201,39 @@
   align-items: center;
   flex-direction: column;
   border-radius: 25px;
-  width: 400px;
-  height: 600px;
   margin-left: 20px;
   margin-right: 20px;
   box-shadow: 20px 20px 50px silver;
+  padding: 40px;
+}
+
+.cart img {
+  width: 200px;
+  height: 200px;
+}
+
+.main_program img {
+  border-radius: 30px;
+}
+
+
+.main_program 
+{
+  padding: 100px 0 80px 0;
 }
 
 .cart__title {
-  font-size: 30px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 26px;
+  margin-top: 32px;
   text-align: center;
 }
 
 .cart__text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  margin-top: 12px;
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 25px;
-  font-weight: 200;
 }
