--- a/style/prices.css
+++ b/style/prices.css
@@ -39,6 +39,14 @@
     justify-content: end;
     align-items: center;
   }
+
+
+  #nav-container a {
+    text-decoration: none;
+  }
+  .margin-on-nav {
+    color: black;
+  }
   #registr-btn {
     width: 150px;
     height: 40px;
