--- a/style/index.css
+++ b/style/index.css
@@ -118,6 +118,11 @@
 }
 
 .registr-btn {
+  position: relative;
+  top: 5px;
+  right: 120px;
+  width: 100px;
+  text-align: center;
   border: none;
   padding: 5px 20px;
   border-radius: 20px;
@@ -126,8 +131,14 @@
   background-color: #fff;
   box-shadow: 05px 5px 10px silver;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
 
 .phone-btn {
+  position: relative;
+  top: -30px;
   padding: 10px;
   border-radius: 50%;
   background-color: #00ab2d;
@@ -135,7 +146,84 @@
   font-weight: 700;
 }
 
+.pop_up {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: rgb(0, 0, 0, 0.7);
+  z-index: 2;
+}
+.pop_up.active {
+  display: block;
+}
+.pop_up.container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.pop_up_body {
+  margin: auto;
+  width: 500px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 100px 15px 110px 15px;
+  position: relative;
+}
+.pop_up_body p {
+  margin-left: 190px;
+  font-size: 28px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  color: #22262D;
+  margin-bottom: 40px;
+}
+.pop_up_body input {
+  display: block;
+  margin: 25px auto 0px auto;
+  width: 330px;
+  padding: 17px 20px;
+  background-color: #e5e5e5;
+  border-radius: 10px;
+  border: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  color: #151515;
+}
+.pop_up_body input:focus {
+  outline: none;
+}
+
+.pop_up_body button {
+  cursor: pointer;
+  display: block;
+  width: 330px;
+  margin: 60px auto 0px auto;
+  padding: 20px 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  border: none;
+  color: #fff;
+  border-radius: 10px;
+  background-color: #00ab2d;
+}
+.pop_up_close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 21px;
+  cursor: pointer;
+}
+
 .btn-rate {
+  position: relative;
+  top: -30px;
   border: none;
   background-color: #00ab2d;
   border-radius: 20px;
