--- a/style/index.css
+++ b/style/index.css
@@ -72,7 +72,7 @@
 }
 
 .right-containers-on-section p {
-  color: gainsboro;
+  color: rgb(172, 168, 168);
   font-size: 27px;
   margin-top: 10px;
 }
