--- a/style/index.css
+++ b/style/index.css
@@ -123,9 +123,9 @@ body {
 }
 
 .registr-btn {
-  position: relative;
-  top: 0px;
-  right: 10px;
+  position: absolute;
+  top: 8px;
+  right: 470px;
   width: 100px;
   text-align: center;
   border: none;
@@ -135,6 +135,7 @@ body {
   margin-right: 20px;
   background-color: #fff;
   box-shadow: 05px 5px 10px silver;
+  cursor: pointer;
 }
 a {
   text-decoration: none;
@@ -156,7 +157,7 @@ a {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 10000%;
   position: fixed;
   left: 0;
   top: 0;
@@ -169,10 +170,10 @@ a {
 .pop_up.container {
   display: flex;
   width: 100%;
-  height: 100%;
 }
 .pop_up_body {
-  margin: auto;
+  margin-top: 150px;
+  margin-left: 650px;
   width: 500px;
   background-color: #fff;
   border-radius: 10px;
@@ -212,7 +213,7 @@ a {
   padding: 20px 0px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 25px;
   border: none;
   color: #fff;
   border-radius: 10px;
