--- a/style/job.css
+++ b/style/job.css
@@ -12,16 +12,13 @@
 /* style list search jobs */
 
 
-  body {
-    /* height: 1640px; */
-  }
   #navbar {
     z-index: 10;
     position: fixed;
     background-color: white;
     width: 100%;
     height: 80px;
-    box-shadow: 0px 1px 20px silver;
+    box-shadow: 0px 2px 4px silver;
   }
   #logo-nav {
     width: 40px;
@@ -246,16 +243,18 @@
 .type_services p {
     text-align: center;
     font-weight: 500;
-    font-size: 12px;
     margin-bottom: 1rem;
+    width: 183px ;
+    line-height: 61px;
   }
   
   .type_services i {
       display: flex;
       justify-content: center;
-      font-size: 25px;
+      font-size: 36px;
       padding-bottom: 15px;
       color: gainsboro;
+      
   }
   
   .type_services:hover p {
@@ -266,13 +265,44 @@
   color: #00ab2d;
   }
   
-  .services a:nth-child(1) {
-      border-bottom: 3px solid #00ab2d;
-  }
   
-  .type_services {
-      width: 200px;
-  }
+.services a 
+{
+  align-items: center;
+  text-align: center;
+  padding: 5px;
+
+}
+
+.services {
+  box-shadow: 5px 0px 20px rgba(176, 176, 245, 0.623);
+margin-top: 141px;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+height: 308px;
+}
+
+
+aside {
+    position: fixed;
+  height: 100%;
+  z-index: 10;
+  background-color: #fff;
+width: 60px;
+align-items: center;
+height: 31px;
+}
+
+.icon-bars {
+  border: none;
+  background-color:transparent;
+  font-size: 33px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 14px;
+  padding-bottom: 10px;
+}
   
   
   
@@ -297,7 +327,7 @@
 .block_jobs {
     margin: 0 auto;
     max-width: 786px;
-    padding: 20px 0 100px 0 ;
+    padding: 81px 0 100px 0 ;
 }
 
 .block_jobs form {
@@ -309,9 +339,6 @@
     justify-content: center;
 }
 
-.block_services  {
-    padding-top:110px ;
-}
 
 
 
@@ -376,7 +403,7 @@ outline: none;
     font-size: 10px;
     border-radius: 30px;
     background-color: #00ab2d;
-    padding: 4px 4px;
+    padding: 2px 4px;
     height: 15px;
     color: white;
     text-align: center;
@@ -581,6 +608,10 @@ display: none;
 #abs-footer {
   background-color: #151515;
   width: 100%;
+}
+footer {
+  position: relative;
+  z-index: 20;
 }
 
 #flex-containers-footer {
