--- a/style/masters.css
+++ b/style/masters.css
@@ -181,7 +181,7 @@
   .type_services i {
       display: flex;
       justify-content: center;
-      font-size: 25px;
+      font-size: 36px;
       padding-bottom: 15px;
       color: gainsboro;
   }
@@ -196,6 +196,9 @@
     text-align: center;
 }   
 
+.container_mastar {
+  padding-top: 100px;
+}
 
   
   .type_services:hover p {
@@ -206,13 +209,8 @@
   color: #00ab2d;
   }
   
-  .services a:nth-child(2) {
-      border-bottom: 3px solid #00ab2d;
-  }
-  
-  .type_services {
-      width: 200px;
-  }
+
+ 
   
   
   
@@ -369,9 +367,6 @@
 
 }
 
-.block_services  {
-    padding-top:110px ;
-}
 
 
 .btn-catalog {
