--- a/style/job.css
+++ b/style/job.css
@@ -18,6 +18,8 @@
     background-color: white;
     width: 100%;
     height: 80px;
+
+
     box-shadow: 0px 2px 4px silver;
   }
   #logo-nav {
@@ -308,7 +310,7 @@ height: 31px;
   
   .services {
       position: relative;
-  
+  background-color: #fff;
   }
   
   .block_services {
@@ -611,7 +613,7 @@ display: none;
 }
 footer {
   position: relative;
-  z-index: 20;
+  z-index: 0;
 }
 
 #flex-containers-footer {
