--- a/style/masters.css
+++ b/style/masters.css
@@ -19,7 +19,8 @@
     height: 80px;
 
     
-    box-shadow: 0px 1px 20px silver;
+
+    box-shadow: 0px 2px 4px silver;
   }
 
   .margin-on-nav {
@@ -216,6 +217,7 @@
   
   .services {
       position: relative;
+      background-color: #fff;
   
   }
   
