--- a/style/prices.css
+++ b/style/prices.css
@@ -14,10 +14,9 @@
     background-color: white;
     width: 100%;
     height: 80px;
-
-    
-    box-shadow: 0px 1px 20px silver;
-  }
+    box-shadow: 0px 2px 4px silver;
+}
+  
   #logo-nav {
     width: 50px;
     height:45px;
@@ -213,6 +212,12 @@
   .services a:nth-child(3) i {
   color: #00ab2d;
   }
+  .item .text {
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 28px;
+  }
  
 
   
@@ -220,6 +225,7 @@
   
   .services {
       position: relative;
+      background-color: #fff;
   
   }
   
