--- a/style/index.css
+++ b/style/index.css
@@ -12,13 +12,17 @@ body {
 }
 
 .header-section {
-  padding-top: 100px;
+  /* background-image: url(https://st2.depositphotos.com/1001335/10179/i/600/depositphotos_101794070-stock-photo-border-of-auto-parts-isolated.jpg);
+  background-position: center;
+  background-repeat: no-repeat; */
+  /* padding-top: 100px;
   width: 1200px;
-  margin: 0 auto;
+  margin: 0 auto; */
+height: 630px;
 }
 
 .section-container {
-  column-gap: 123px;
+ padding-top: 60px;
 }
 #navbar {
   z-index: 10;
@@ -27,6 +31,7 @@ body {
   width: 100%;
   height: 60px;
   box-shadow: 0px 1px 10px silver;
+  
 }
 
 .text-on-section {
@@ -46,31 +51,41 @@ body {
   padding-top: 10px;
 }
 
+
+.right-container .btn-enter button {
+  border: none;
+  border-radius: 20px;
+  background-color: #fff;
+  box-shadow: 4px 5px 4px 1px gainsboro;
+  padding: 5px 20px ;
+  font-weight: 600;
+  margin-right: 10px;
+}
 .bnt-zakas {
   float: right;
   border: none;
-  background-color: #00ab2d;
+  background: linear-gradient(to left, #d3deff, #2948ff);
   color: white;
   padding: 20px 40px;
   border-radius: 50px;
   font-weight: 700;
   transition: 0.3s;
   
-  height: 80px;
+  height: 66px;
   width: 263px;
 
 }
 .bnt-zakas:hover {
-  background-color: #00741f;
+  background-color: #d2ac85;
   transition: 0.3s;
 }
 
 .right-cont-search {
-  border: 2px solid #00ab2d;
+  border: 2px solid #2948ff;
   border-radius: 50px;
   padding: 4px;
   width: 276px;
-  height: 92px;
+  height: 79px;
   margin-top: 40px;
 }
 
@@ -88,12 +103,15 @@ body {
 }
 
 .left-containers-on-section img {
-  width: 543px;
-  height: 500px;
-  border-radius: 50%;
+  /* width: 543px;
+  height: 500px; */
+ 
 }
 .left-containers-on-section {
-  padding-top: 59px;
+  /* background-image: url(../images/depositphotos_102665706-stock-photo-auto-parts-in-the-cardboard.jpg);
+  background-position: center;
+  background-repeat: no-repeat; */
+  padding-top: 60px;
 }
 
 /* status block */
@@ -108,7 +126,7 @@ body {
 }
 
 .icons_style {
-  color: #00ab2d;
+  color: #3494e6;
   font-size: 3rem;
 }
 
@@ -119,11 +137,11 @@ body {
 
 .h1_style {
   font-weight: bold;
-  color: #00ab2d;
+  color:  #3494e6;
 }
 
 .logo-nav {
-  color: #00ab2d;
+  color: #2948ff;
   font-size: 15px;
   padding: 0 0 0 10px;
 }
@@ -141,7 +159,7 @@ body {
 .phone-btn {
   padding: 10px;
   border-radius: 50%;
-  background-color: #00ab2d;
+background-color: #3494e6;
   color: white;
   font-weight: 700;
 }
@@ -151,6 +169,7 @@ body {
   background-color: #00ab2d;
   border-radius: 20px;
   color: white;
+  background: linear-gradient(to left, #aec0f5, #2948ff);
   padding: 5px 20px;
   margin-right: 20px;
   font-weight: 700;
@@ -195,6 +214,8 @@ body {
   line-height: 24px;
   max-width: 262px;
   font-size: 20px;
+  color: #a59090  ;
+  font-family: initial;
 }
 
 .cart {
@@ -287,6 +308,9 @@ body {
   background: none;
   width: 1200px;
   height: 80px;
+  box-shadow: 05px 5px 10px silver;
+border-radius: 20px;
+padding-left: 20px ;
 }
 .button-w {
   margin-left: 100px;
@@ -294,11 +318,19 @@ body {
 }
 .plus-btn {
   margin-right: 50px;
-  background-color: #00ab2d;
+  background-color: blue;
   color: white;
   padding: 10px;
   border-radius: 50%;
 }
+
+.card-body {
+  box-shadow: 05px 5px 10px silver;
+  border-radius: 20px;
+  padding: 10px;
+}
+
+
 #abs-footer {
   background-color: #151515;
   width: 100%;
