--- a/style/job.css
+++ b/style/job.css
@@ -25,7 +25,7 @@
   #logo-nav {
     width: 40px;
     height: 40px;
-    color: #00ab2d;
+    color: #2948ff;
   }
   #nav-container {
     display: flex;
@@ -68,7 +68,7 @@
       Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-weight: 600;
     font-size: 15px;
-    background-color: #00ab2d;
+    background: linear-gradient(to left, #d3deff, #2948ff);
     color: #fff;
   }
   
@@ -82,7 +82,7 @@
     align-items: center;
     width: 50px;
     height: 50px;
-    background-color: #00ab2d;
+    background-color: #2948ff;
     color: white;
     width: 40px;
     height: 40px;
@@ -196,7 +196,7 @@
 
 .navbar-logo i {
     font-size: 40px;
-    color: #00ab2d;
+    color: #2948ff;
 }
 
 .navbar-logo {
@@ -209,7 +209,7 @@
 .btn-button:nth-child(2) {
     color: white;
    height: 40px;
-   background-color: #00ab2d;
+   background: linear-gradient(to left, #d3deff, #2948ff);
    font-family: bolder;
    text-align: center;
    align-items: center;
@@ -264,7 +264,7 @@
   }
   
   .services a:nth-child(1) i {
-  color: #00ab2d;
+  color: #2948ff;
   }
   
   
@@ -334,7 +334,7 @@ height: 31px;
 
 .block_jobs form {
     width: 100%;
-    border: 2px solid gainsboro;
+    border: 2px solid #2948ff;
     border-radius: 10px;
     padding: 10px 0 10px 0;
     display: flex;
@@ -352,7 +352,7 @@ outline: none;
 }
 
 .block_jobs form i {
-    color: gainsboro;
+    color: #2948ff;
     float: right;
     text-align: center  ;
     font-size: 20px;
@@ -373,6 +373,7 @@ outline: none;
     font-size: 20px;
     font-weight: 600;
     line-height: 24px;
+    color: #2948ff;
 }
 
 
@@ -404,7 +405,7 @@ outline: none;
 #random_number {
     font-size: 10px;
     border-radius: 30px;
-    background-color: #00ab2d;
+    background-color: #2948ff;
     padding: 2px 4px;
     height: 15px;
     color: white;
@@ -430,10 +431,19 @@ outline: none;
 }
 
 .type_job:hover {
-    border: 3px solid #00ab2d;
+    border: 3px solid #2948ff;
     transition: 0.1s;
-    
 }
+
+.type_job:hover i {
+  color: #2948ff;
+}
+
+
+.type_job:hover svg{
+color: #2948ff;
+}
+
 section {
     padding: 0;
 
