--- a/style/index.css
+++ b/style/index.css
@@ -51,6 +51,77 @@ height: 630px;
   padding-top: 10px;
 }
 
+.btn-enter {
+  border: none;
+  border-radius: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  background-color: #fff;
+  padding: 5px 20px ;
+  box-shadow: 0px 1px 10px silver;
+  margin-right: 15px;
+}
+
+
+
+
+/* Всплывающая форма-скрыта по умолчанию */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  top: -120px;
+  right: 20px;
+  margin-top: 200px;
+  box-shadow: 05px 5px 10px silver;
+  border-radius: 20px;
+}
+
+/* Добавление стилей в контейнер форм */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+  box-shadow: 1px -3px 10px #ddd;
+  border-radius: 20px;
+}
+
+/* Поля ввода полной ширины */
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* Когда входы получают фокус, сделайте что-нибудь */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Установите стиль для кнопки отправить/кнопка */
+.form-container .btn {
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Добавьте красный цвет фона к кнопке отмена */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Добавьте некоторые эффекты наведения на кнопки */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+
 
 .right-container .btn-enter button {
   border: none;
@@ -64,7 +135,7 @@ height: 630px;
 .bnt-zakas {
   float: right;
   border: none;
-  background: linear-gradient(to left, #d3deff, #2948ff);
+  background: linear-gradient(to left, #3d4d7cfb, #2949ffe8);
   color: white;
   padding: 20px 40px;
   border-radius: 50px;
@@ -103,8 +174,7 @@ height: 630px;
 }
 
 .left-containers-on-section img {
-  /* width: 543px;
-  height: 500px; */
+
  
 }
 
@@ -151,6 +221,8 @@ height: 630px;
 }
 
 .registr-btn {
+  width: 100px;
+  text-align: center;
   border: none;
   padding: 5px 20px;
   border-radius: 20px;
@@ -158,12 +230,101 @@ height: 630px;
   margin-right: 20px;
   background-color: #fff;
   box-shadow: 05px 5px 10px silver;
+  cursor: pointer;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.phone-btn {
+  position: relative;
+  top: 0px;
+  padding: 10px;
+  border-radius: 50%;
+  background-color: #00ab2d;
+  color: white;
+  font-weight: 700;
+}
+
+.pop_up {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 10000%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: rgb(0, 0, 0, 0.7);
+  z-index: 2;
+}
+.pop_up.active {
+  display: block;
+}
+.pop_up.container {
+  display: flex;
+  width: 100%;
+}
+.pop_up_body {
+  margin-top: 150px;
+  margin-left: 650px;
+  width: 500px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 100px 15px 110px 15px;
+  position: relative;
+}
+.pop_up_body p {
+  margin-left: 190px;
+  font-size: 28px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  color: #22262D;
+  margin-bottom: 40px;
+}
+.pop_up_body input {
+  display: block;
+  margin: 25px auto 0px auto;
+  width: 330px;
+  padding: 17px 20px;
+  background-color: #e5e5e5;
+  border-radius: 10px;
+  border: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  color: #151515;
+}
+.pop_up_body input:focus {
+  outline: none;
+}
+.pop_up_body button {
+  cursor: pointer;
+  display: block;
+  width: 330px;
+  margin: 60px auto 0px auto;
+  padding: 20px 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  font-size: 25px;
+  border: none;
+  color: #fff;
+  border-radius: 10px;
+  background: linear-gradient(to left, #3d4d7cfb, #2949ffe8);
+}
+.pop_up_close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 21px;
+  cursor: pointer;
 }
 
 .phone-btn {
   padding: 10px;
   border-radius: 50%;
-background-color: #3494e6;
+  background: linear-gradient(to left, #3d4d7cfb, #2949ffe8);
   color: white;
   font-weight: 700;
 }
@@ -173,7 +334,7 @@ background-color: #3494e6;
   background-color: #00ab2d;
   border-radius: 20px;
   color: white;
-  background: linear-gradient(to left, #aec0f5, #2948ff);
+  background: linear-gradient(to left, #3d4d7cfb, #2949ffe8);
   padding: 5px 20px;
   margin-right: 20px;
   font-weight: 700;
@@ -244,6 +405,7 @@ background-color: #3494e6;
   width: 100%;
   display: flex;
   justify-content: center;
+  margin: 0 auto;
 }
 
 .main_program {
