--- a/style/job.css
+++ b/style/job.css
@@ -68,7 +68,7 @@
       Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-weight: 600;
     font-size: 15px;
-    background: linear-gradient(to left, #d3deff, #2948ff);
+    background: linear-gradient(to left, #3d4d7cfb, #2949ffe8);
     color: #fff;
   }
   
@@ -82,7 +82,7 @@
     align-items: center;
     width: 50px;
     height: 50px;
-    background-color: #2948ff;
+    background: linear-gradient(to left, #3d4d7cfb, #2949ffe8);
     color: white;
     width: 40px;
     height: 40px;
