--- a/style/prices.css
+++ b/style/prices.css
@@ -20,7 +20,7 @@
   #logo-nav {
     width: 50px;
     height:45px;
-    color: #00ab2d;
+    color: blue;
   }
   #nav-container {
     display: flex;
@@ -70,11 +70,13 @@
       Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-weight: 600;
     font-size: 15px;
-    background-color: #00ab2d;
+    background: linear-gradient(to left, #3d4d7cfb, #2949ffe8);
     color: #fff;
   }
   
   #phone-btn {
+    background: linear-gradient(to left, #3d4d7cfb, #2949ffe8);
+
     position: relative;
     top: -40px;
     left: 370px;
@@ -210,7 +212,7 @@
   }
   
   .services a:nth-child(3) i {
-  color: #00ab2d;
+  color: blue;
   }
   .item .text {
     cursor: pointer;
@@ -252,18 +254,20 @@
   }
 
   .price {
-    color: black;
-    background-color: gainsboro;
+    color: white;
     padding: 3px 5px 3px 5px;
     border-radius: 6px;
+    background: linear-gradient(to left, #3d4d7cfb, #2949ffe8);
+    font-weight: 600;
   }
 
   .title  {
-    color: #00ab2d;
+    color: #2948ff;
     background-color: bold;
     font-size: 25px;
     padding-top: 30px;
     font-family: bolder;
+    font-weight: 700;
   }
 
   .page-title h1{
@@ -273,7 +277,7 @@
 
   #btn-catalog button{
     border: none ; 
-    background-color: #00ab2d;
+    background-color: #2948ff;
     color: white;
     text-align: center;
     padding: 5px 30px;
